--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airports-finder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://igormarcikic.github.io/airdport-finer",
+  "homepage": "http://igormarcikic.github.io/airport-finder",
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
